fixed alignment in hero section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,6 +84,7 @@ main {
     display:flex;
     justify-content: flex-end;
     text-align: right;
+    align-items: flex-end;
 }
 
 .hero-section div {
